fix: better obtaining singleton method